devops/k8s/deployment-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-service
    spec:
      containers:
      - image: oltur/user-service:$SERVICE_VERSION
        name: user-service
        resources: {}
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
status: {}
